# blazing-bot-task

./: .gitignore  README.md
task_one/: README.md
task_one/bot/: Cargo.toml
task_one/bot/abis/: Blaze.json
task_one/bot/src/: eth_operations.rs  main.rs
task_one/contracts/: foundry.toml
task_one/contracts/broadcast/Blaze.s.sol/11155111/: run-1724445434.json  run-1724446497.json  run-1724449561.json
task_one/contracts/broadcast/FundWallets.s.sol/11155111/: run-1724527310.json  run-1724529329.json  run-1724529529.json
task_one/contracts/broadcast/MockToken.s.sol/11155111/: run-1724446901.json  run-latest.json
task_one/contracts/script/: Blaze.s.sol  FundWallets.s.sol  MockToken.s.sol
task_one/contracts/src/: Blaze.sol
task_one/contracts/src/libraries/: ContractCheck.sol  DataTypes.sol  Errors.sol
task_one/contracts/test/: Blaze.t.sol
task_one/contracts/test/mock/: MockToken.sol
task_two/: Cargo.toml  tst.json  tst.txt
task_two/src/: main.rs
