[package]
name = "test-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
alloy = { version = "0.2", features = ["full"] }
eyre = "=0.3.7"
url = "2.5.2"